k8s/contour-ingress/httpbin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http
  namespace: default
spec:
  parentRefs:
    - name: contour-gateway
      namespace: projectcontour
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: my-added-header
                value: added-value
      backendRefs:
        - name: httpbin
          port: 8000
